fix: adjust spacing and font weight for improved layout and readability

--- a/src/app/components/about-section/about-section.css
+++ b/src/app/components/about-section/about-section.css
@@ -18,7 +18,7 @@
 .about-section p {
   font-size: 16px;
   color: black;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   text-align: justify;
 
 }
