--- a/src/app/components/information/information.css
+++ b/src/app/components/information/information.css
@@ -6,6 +6,7 @@
     /* gap: 24px; */
     max-width: 500px;
     grid-area: info;
+    margin-bottom: 16px;
 }
 
 .infos .languages-info {
@@ -23,7 +24,7 @@
     gap: 24px;
     align-items: center;
     width: 100%;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 }
 
 .infos span {
