--- a/src/app/components/sectionTitle/sectionTitle.css
+++ b/src/app/components/sectionTitle/sectionTitle.css
@@ -1,5 +1,5 @@
 .section-title {
-    font-weight: 500;
+    font-weight: 400;
     font-size: 18px;
     text-align: center;
     line-height: 28px;
@@ -9,7 +9,7 @@
 
 @media (min-width: 768px) {
     .section-title {
-        font-size: 24px;
+        font-size: 20px;
         line-height: 36px;
         text-align: start;
         margin-bottom: 10px;
